--- a/test.html
+++ b/test.html
@@ -3,9 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Embed Example</title>
+    <title>Embedded Charts</title>
+    <style>
+        /* 基本樣式重置 */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f9;
+            color: #333;
+            line-height: 1.6;
+            padding: 20px;
+        }
+
+        header {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        header h1 {
+            font-size: 2rem;
+            color: #555;
+        }
+
+        .container {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+        }
+
+        .iframe-wrapper {
+            border: 2px solid #ddd;
+            border-radius: 10px;
+            overflow: hidden;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        iframe {
+            display: block;
+            width: 100%;
+            height: 600px;
+            border: none;
+        }
+
+        footer {
+            text-align: center;
+            margin-top: 20px;
+            font-size: 0.9rem;
+            color: #888;
+        }
+    </style>
 </head>
 <body>
-    <iframe src="https://plotdb.io/v/chart/35216" width="100%" height="600px" allowfullscreen="true" frameborder="0"></iframe>
+    <header>
+        <h1>Embedded Charts</h1>
+    </header>
+    <div class="container">
+        <div class="iframe-wrapper">
+            <iframe src="https://plotdb.io/v/chart/35197" allowfullscreen="true"></iframe>
+        </div>
+        <div class="iframe-wrapper">
+            <iframe src="https://plotdb.io/v/chart/35216" allowfullscreen="true"></iframe>
+        </div>
+    </div>
+    <footer>
+        <p>Created by a92516</p>
+    </footer>
 </body>
 </html>
